--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
 		<jsch.version>0.1.55</jsch.version>
 		<lombok.version>1.18.30</lombok.version>
 		<jinjava.version>2.7.1</jinjava.version>
+		<validators.version>1.8.0</validators.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -59,6 +60,11 @@
 			<groupId>com.hubspot.jinjava</groupId>
 			<artifactId>jinjava</artifactId>
 			<version>${jinjava.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>commons-validator</groupId>
+			<artifactId>commons-validator</artifactId>
+			<version>${validators.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
