add restart stage

--- a/src/main/resources/stages.yaml
+++ b/src/main/resources/stages.yaml
@@ -20,6 +20,21 @@ start:
     - display: ❌Я передумал
       to: stop
 
+restart:
+  text: |
+    ‼️*ОСТОРОЖНО\!* 
+    Я вижу, что ты уже настроил свой VPN\-сервис\.
+    Повторное прохождение настройки *__полностью перезапишет__* текущую конфигурацию\.
+    Все ранее созданные файлы конфигурации станут недействительными, старые клиенты *__не смогут__* подключиться к твоему VPN\-сервису\!
+
+  parse_mode: MarkdownV2
+  allowed_answer: callback
+  chooses:
+    - display: 🔄Перезаписать конфигурацию
+      to: host-req
+    - display: ❌Отмена
+      to: stop
+
 vpn-advantages:
   text: |
     ➕*Безопасность* 
