--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,9 @@
 		<lombok.version>1.18.30</lombok.version>
 		<jinjava.version>2.7.1</jinjava.version>
 		<validators.version>1.8.0</validators.version>
+		<postgresql.version>42.7.1</postgresql.version>
+		<h2.version>2.2.224</h2.version>
+		<jaxb-api.version>2.3.1</jaxb-api.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -35,6 +38,14 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-validation</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-jpa</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>com.fasterxml.jackson.dataformat</groupId>
@@ -65,6 +76,21 @@
 			<groupId>commons-validator</groupId>
 			<artifactId>commons-validator</artifactId>
 			<version>${validators.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.postgresql</groupId>
+			<artifactId>postgresql</artifactId>
+			<version>${postgresql.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>com.h2database</groupId>
+			<artifactId>h2</artifactId>
+			<version>${h2.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>javax.xml.bind</groupId>
+			<artifactId>jaxb-api</artifactId>
+			<version>${jaxb-api.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
