--- a/src/main/resources/application-template.yaml
+++ b/src/main/resources/application-template.yaml
@@ -14,13 +14,17 @@ logging:
   level:
     com.github.spector517.veepeenet.bot: DEBUG
 
+  h2:
+    console:
+      enabled: true
+      path: /h2-console
+
   datasource:
-    url: jdbc:postgresql://localhost:5432/veepeenet
-    username: postgres
+    url: jdbc:h2:mem:veepeenet
+    username: sa
     password: qwe123
-    driver-class-name: org.postgresql.Driver
+    driver-class-name: org.h2.Driver
   jpa:
     hibernate:
       ddl-auto: update
-    database: postgresql
-    database-platform: org.hibernate.dialect.PostgreSQLDialect
+    database-platform: org.hibernate.dialect.H2Dialect
